--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -51,3 +51,9 @@ table th {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
+.nav-header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
