--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #ebeff1;
+}
+
 main {
   min-height: 80vh;
 }
@@ -55,5 +59,12 @@ table th {
 .nav-header {
   position: sticky;
   top: 0;
+  width: 100%;
   z-index: 100;
+  background-color: #506574;
+  font-size: 1.3rem;
+}
+
+.brand-text {
+  font-size: 1.3rem;
 }
