--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -1,9 +1,32 @@
 body {
   background-color: #ebeff1;
+  color: #506574;
 }
 
 main {
   min-height: 80vh;
+}
+
+table td,
+table th {
+  text-align: center;
+}
+
+a {
+  color: #506574;
+}
+
+a:hover {
+  color: #33414b;
+}
+
+.dropdown-item:focus,
+.dropdown-item.active {
+  background-color: #506574
+}
+
+.card-text {
+  color: #506574;
 }
 
 .rating span {
@@ -21,15 +44,10 @@ main {
 }
 
 .product-title {
-  height: 2.5em; /* Set a fixed height */
-  overflow: hidden; /* Hide overflow content */
-  text-overflow: ellipsis; /* Add ellipsis for long text */
-  white-space: nowrap; /* Prevent wrapping */
-}
-
-table td,
-table th {
-  text-align: center;
+  height: 2.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .review {
@@ -67,4 +85,34 @@ table th {
 
 .brand-text {
   font-size: 1.3rem;
+}
+
+.pagination {
+  --bs-pagination-padding-x: 1.75rem;
+  --bs-pagination-padding-y: 0.375rem;
+  --bs-pagination-font-size: 1rem;
+  --bs-pagination-color: #506574;
+  --bs-pagination-border-color: #bfc3c7;
+  --bs-pagination-hover-color: #506574;
+  --bs-pagination-hover-bg: #bfc3c7;
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem #3c4c5d40;
+  --bs-pagination-active-color: #fff;
+  --bs-pagination-active-bg: #506574;
+  --bs-pagination-active-border-color: #506574;
+}
+
+.btn {
+  background-color: #506574;
+  border: none;
+  padding: 0.6rem 0.8rem;
+  --bs-btn-active-bg: #6a8294;
+  --bs-btn-hover-bg: #6a8294;
+}
+
+.btn:disabled {
+  background-color: #6a8294;
+}
+
+.badge {
+  background-color: #3b4953 !important;
 }
